--- a/styles.css
+++ b/styles.css
@@ -335,3 +335,87 @@ body { font-family: "Times New Roman", serif; }
 .flag4 { bottom: 0%; left: 15%; }
 .flag5 { bottom: 35%; left: -5%; }
 .flag6 { top: 10%; left: 10%; }
+
+
+
+.about-us {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background: #f4f4f4;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+}
+
+.image-section {
+    flex: 1;
+    padding: 40px;
+}
+
+.image-section img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-section {
+    flex: 1;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-section h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+.text-section p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+.stats {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.stat {
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.stat p:first-child {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.cta-btn {
+    display: block;
+    width: 40%;
+    padding: 10px;
+    font-size: 1rem;
+    background-color: #e94a46;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    
+}
+
+.cta-btn:hover {
+    background-color: #c43d36;
+}
