--- a/styles.css
+++ b/styles.css
@@ -1294,6 +1294,7 @@ html, body {
   .schedule-container {
     grid-template-columns: 1fr;
     text-align: center;
+    line-height: 1.5rem;
   }
 }
 
